refactor: enhance user retrieval in AuthService and improve test setup in AuthServiceTest